--- a/index.html
+++ b/index.html
@@ -1,156 +1,1 @@
-  <!DOCTYPE html>
-<html lang="en">
-<title>Yang Xiao</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" href="media/yangicon.png">
-<style>
-    html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
-    .mySlides {display:none}
-    .w3-tag, .fa {cursor:pointer}
-    .w3-tag {height:15px;width:15px;padding:0;margin-top:6px}
-
-    p.pmargin
-    {
-        margin-left: 30px;
-        margin-right: 30px;
-    }
-
-    a.anchor{
-        display: block;
-        content ="";
-        position: relative;
-        top: -80px;
-        visibility: hidden;
-    }
-
-    div.sfix
-    {
-        content: " ";
-    }
-</style>
-
-<head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171741102-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-171741102-1');
-    </script>
-</head>
-
-
-<body>
-<!-- top bar -->
-<div class="w3-top">
-
-    <div class="w3-row w3-large" style="background-color:#0033A0;color:white">
-        <a class="w3-bar-item w3-button w3-padding-large w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <!-- <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hide-medium">Yang Xiao</a> -->
-        <a href="https://www.engr.uky.edu/directory/xiao-yang" class="w3-bar-item w3-padding-small"><img class="w3-center" src="media/uk-lockup-white.png" style="width:164px; height:48px; " align="middle"></a>
-        <a href="service.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Service</a>
-        <a href="members.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Members</a>
-        <a href="teaching.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Teaching</a>
-        <a href="research.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Research</a>
-        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Publication</a>
-        <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right w3-white">Home</a>
-    </div>
-
-    <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-large">
-        <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>    
-        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large">Publication</a>
-        <a href="research.html" class="w3-bar-item w3-button w3-padding-large">Research</a>
-        <a href="teaching.html" class="w3-bar-item w3-button w3-padding-large">Teaching</a>
-        <a href="members.html" class="w3-bar-item w3-button w3-padding-large">Members</a>    
-        <a href="service.html" class="w3-bar-item w3-button w3-padding-large">Service</a>  
-    </div>
-</div>
-
-
-<div class="w3-content" style="max-width:1080px;margin-top:100px;margin-bottom:80px">
-<!--     <div class ='w3-center w3-padding-32'>
-        <span class="w3-xxlarge w3-center w3-bottombar w3-border-dark-grey w3-padding-16">Publications</span>
-    </div> -->
-    <div class="w3-row-padding" id="front">
-        <div class="w3-third">
-    <!-- <div class="w3-card-4"> -->
-            <h2><p class="pmargin">
-            <center>
-            <img class="w3-center" src="peoplepics/YangXiao.jpg" style="width:206px; height:200px; " align="middle">
-            </center>
-            </p></h2>
-        <!-- </div> -->
-        </div>
-
-        <div class="w3-twothird">
-            <h3> <p class="pmargin w3-text-black"> Yang Xiao </p></h3>
-            <h6>
-                <p class="pmargin">
-                Assistant Professor
-                <br>Department of Computer Science, University of Kentucky
-                <br>Email: xiaoy[AT]uky.edu
-                <br>Office: 233 James F. Hardymon Building
-                <br>Phone: (859) 257-3101
-                <br><a href="https://scholar.google.com/citations?user=BiVROyUAAAAJ&hl=en" style="color:blue">Google Scholar</a>
-                <a href="https://dblp.org/pid/181/1848-10.html" style="color:blue">dblp</a> 
-                <a href="https://github.com/yang-sec" style="color:blue">GitHub</a>   
-                <a href="Curriculum_Vitae.pdf" style="color:blue">CV</a>
-                </p>
-            </h6>
-        </div>
-    </div>
-
-    <h3> <p class="pmargin w3-text-indigo"> About Me </p></h3>
-    <h6>
-        <p class="pmargin">
-        I am an Assistant Professor in the <a href="https://www.engr.uky.edu/research-faculty/departments/computer-science" style="color:blue">Department of Computer Science</a> at the <a href="https://uky.edu/" style="color:blue">University of Kentucky</a>. My research area is <b>Network and Information Security</b>. I am particularly interested in security and privacy issues in computer/communication networks, distributed systems, blockchain and decentralized systems, and more recently next-G mobile networks. I enjoy analyzing the fundamental security and privacy challenges in these systems and developing novel solutions under the assumption of zero or limited trust.
-        I obtained my Ph.D. degree in Computer Engineering at Virginia Tech, supervised by <a href="https://www.cnsr.ictas.vt.edu/WJLou.html" style="color:blue">Dr. Wenjing Lou</a>. I received my master's degree from University of Michigan in 2017 and bachelor's degree from Shanghai Jiao Tong University (SJTU) in 2014.
-        </p>
-        <!-- <p class="pmargin"><b>I am looking for self-motivated students to work on security and privacy topics in blockchain, distributed systems, next-G mobile networks, among other exciting things. Check out <a href="members.html" style="color:red">Members</a> for details.</b></p> -->
-        
-    </h6>
-
-    <h3> <p class="pmargin w3-text-indigo"> News </p></h3>
-    <h6>
-        <p class="pmargin">
-        &#9726;&nbsp; [Feb 2023] Our paper  "ARI: Attestation of Real-time Mission Execution Integrity" is accepted by USENIX Security 2023.
-        <br>&#9726;&nbsp; [Dec 2022] Our paper  "A Decentralized Truth Discovery Approach to the Blockchain Oracle Problem" is accepted by IEEE INFOCOM 2023.
-        <br>&#9726;&nbsp; [Nov 2022] I gave a remote talk titled "Blockchain and Trusted Execution Environment: Security Properties, Synergies, and a Privacy Application" to the Delta 2022 Cybersecurity Conference at UTN Facultad Regional Delta, Argentina.
-        <br>&#9726;&nbsp; [Oct 2022] Our paper "SofitMix: A Secure Offchain-Supported Bitcoin-Compatible Mixing Protocol" is accepted by IEEE TDSC.
-        <br>&#9726;&nbsp; [Sep 2022] Our paper "Squeezing More Utility via Adaptive Clipping on Deferentially Private Gradients in Federated Meta-Learning" is accepted by ACSAC 2022.
-        <br>&#9726;&nbsp; [Aug 2022] I started the Assistant Professor position at Dept. of CS, University of Kentucky.
-        <br>&#9726;&nbsp; [Jun 2022] I started serving the Web Co-chair of INFOCOM 2022.        
-        <br>&#9726;&nbsp; [May 2022] I successfully defended my Ph.D. dissertation "Blockchain and Distributed Consensus: From Security Analysis to Novel Applications".
-        <br>&#9726;&nbsp; [Apr 2022] Our paper  "CANShield: Signal-based Intrusion Detection for Controller Area Networks" is accepted by escar USA conference 2022.
-        <br>&#9726;&nbsp; [Feb 2022] Our paper "FLARE: Defending Federated Learning against Model Poisoning Attacks via Latent Space Representations" is accepted by ASIACCS 2022.
-        <br>&#9726;&nbsp; [Feb 2022] Our paper "MANDA: On Adversarial Example Detection for Network Intrusion Detection System" is accepted by IEEE TDSC.
-        <br>&#9726;&nbsp; [Dec 2021] Our vision paper "Decentralized Spectrum Access System: Vision, Challenges, and a Blockchain Solution" is accepted by IEEE Wireless Communications.
-        </p>
-    </h6>
-</div>
-
-<!-- <footer class="w3-container w3-padding-32 w3-light-grey w3-center">
-    <a href="#" class="w3-button w3-black w3-margin"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-</footer>
- -->
-<script>
-        // Used to toggle the menu on small screens when clicking on the menu button
-    function myFunction() {
-        var x = document.getElementById("navDemo");
-        if (x.className.indexOf("w3-show") == -1) {
-            x.className += " w3-show";
-        } else {
-            x.className = x.className.replace(" w3-show", "");
-        }
-    }
-    
-</script>
-
-</body>
-</html>
+Home page will be updated soon
