--- a/research-blockchain4wireless.html
+++ b/research-blockchain4wireless.html
@@ -68,10 +68,10 @@
 
     <hr>
     <div class="w3-row">
-        <div class="w3-half">
+        <div class="w3-threequarter">
         <center>
             <p class="pmargin">
-            <img class="w3-center" src="media/inter-sas.png" style="width:500px; height:200; " align="middle">
+            <img class="w3-center" src="media/inter-sas.png" style="width:750px; height:300; " align="middle">
             </p>
         </center>
         </div>
