--- a/publication.html
+++ b/publication.html
@@ -116,7 +116,7 @@
         <br><br>
         <strong>VCNF: A Secure Video Conferencing System Based on P2P Technology</strong> 
         [<a href="papers/2008_HPCC.pdf" style="color:red">PDF</a>]
-        <br> N. Wang, Y. Chen, Y. Xiao, Y. Hu, W. Lou, Y. T. Hou
+        <br> C.Du, H.Yin, C.Lin, and Y.Hu
         <br> <em>10th IEEE International Conference on High Performance Computing and Communications (HPCC) </em>, 2008. (AR=19.8%).
 
     </h6>
