--- a/publication.html
+++ b/publication.html
@@ -66,24 +66,31 @@
     <h3> <p class="pmargin w3-text-indigo"> Conference Publications </p></h3>
     <h6>
         <p class="pmargin">
+
+        <strong>MS-PTP: Protecting Network Timing from Byzantine Attacks</strong> 
+        [<a href="papers/wisec23-winter-paper62.pdf" style="color:red">PDF</a>]
+        <br> S. Shi, Y. Xiao, C. Du, M. Shahriar, A. Li, N. Zhang, Y. Hou, W. Lou
+        <br> <em>The 16th ACM Conference on Security and Privacy in Wireless and Mobile Networks (WiSec) </em>, 2023.
+        <br><br>
+
         <strong>Mobile Tracking in 5G and Beyond Networks: Problems, Challenges, and New Directions</strong> 
         [<a href="https://www.cnsr.ictas.vt.edu/publication/Changlai2022.pdf" style="color:red">PDF</a>]
         <br> C. Du, H. Yu, Y. Xiao, W. Lou, C. Wang, R. Gazda, and Y. Hou
         <br> <em>The 19th IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS)</em>, 2022.
-
         <br><br>
+
         <strong>Context-Free Fine-Grained Motion Sensing using WiFi</strong> 
         [<a href="https://www.cnsr.ictas.vt.edu/publication/secon18_final.pdf" style="color:red">PDF</a>]
         <br> C. Du, X. Yuan, W. Lou, and Y. Hou
         <br> <em>15th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON)</em>, 2018. (AR=23.2%)
-
         <br><br>
+
         <strong>An Improved Fast Search and Find of Density Peaks-Based Fog Node Location of Fog Computing System</strong> 
         [<a href="papers/2017_ithings.pdf" style="color:red">PDF</a>]
         <br> X. Yuan, Y. He, Q. Fang, X. Tong, C. Du, and Y. Ding
         <br> <em>Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CP-SCom) and IEEE Smart Data (SmartData)</em>, 2017
-
         <br><br>
+
         <strong>AugAuth: Shoulder-Surfing Resistant Authentication for Augmented Reality</strong> 
         [<a href="https://www.cnsr.ictas.vt.edu/publication/VirtAuth.pdf" style="color:red">PDF</a>]
         <br> R. Zhang, N. Zhang, C. Du, W. Lou, Y. Hou, and Y. Kawamoto
