--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <h3> <p class="pmargin w3-text-indigo"> News </p></h3>
     <h6>
         <p class="pmargin">
+        &#9726;&nbsp; [May 2023] Our paper "UCBlocker: Unwanted Call Blocking Using Anonymous Authentication" is accepted by USENIX Security 2023. <br>
         &#9726;&nbsp; [Mar 2023] Our paper "MS-PTP: Protecting Network Timing from Byzantine Attacks" is accepted by ACM WiSec 2023. <br>
         &#9726;&nbsp; [Mar 2023] I am invited to serve on IEEE ICCCN 2023 program committee. <br>       
         &#9726;&nbsp; [Mar 2023] NSF awards our project on anti-mobile-tracking: "An Anti-tracking and Robocall-free Architecture for Next-G Mobile Networks".<br>
