--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 <!-- top bar -->
 <div class="w3-top">
 
-    <div class="w3-row w3-large" style="background-color:#861F41;color:white">
+    <div class="w3-row w3-large" style="background-color:#B3A369;color:white">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="https://www.gtsi.edu.cn/directory/" class="w3-bar-item w3-padding-small"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:415px; height:36px; " align="middle"></a>
         <a href="service.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Service</a>
         <a href="research.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Research</a>
         <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Publication</a>
@@ -78,10 +79,10 @@
             <h3> <p class="pmargin w3-text-black"> Changlai Du </p></h3>
             <h6>
                 <p class="pmargin">
-                Postdoctoral Associate
-                <br>Department of Computer Science, Virginia Tech
-                <br>Email: cdu@vt.edu
-                <br>Phone: (215) 450-1610
+                Assistant Professor in Computer Science
+                <br>Georgia Tech Shenzhen Institute (GTSI), Tianjin University
+                <br>Email: cdu@gtsi.edu.cn
+                <br>Office: +86-755-36881009 (ext. 382)
                 <br><a href="https://scholar.google.com/citations?user=v7UR83sAAAAJ&hl=en" style="color:blue">Google Scholar</a>
                 <a href="cv_changlai.pdf" style="color:blue">CV</a>
                 </p>
@@ -92,7 +93,7 @@
     <h3> <p class="pmargin w3-text-indigo"> About Me </p></h3>
     <h6>
         <p class="pmargin">
-        I am a Postdoctoral Associate in the <a href="https://cs.vt.edu/" style="color:blue">Department of Computer Science</a> at the <a href="https://www.vt.edu/" style="color:blue">Virginia Tech</a>. My research area is <b>Cybersecurity</b>. I am particularly interested in security and privacy issues in wireless networks, distributed systems, and more recently next-G mobile networks. I enjoy analyzing the fundamental security and privacy challenges in these systems and developing novel solutions under the assumption of zero or limited trust.
+        I am an Assistant Professor in Computer Science at <a href="https://www.gtsi.edu.cn/" style="color:blue">Georgia Tech Shenzhen Institute</a>. My research area is <b>Cybersecurity</b>. I am particularly interested in security and privacy issues in wireless networks, distributed systems, and more recently next-G mobile networks. I enjoy analyzing the fundamental security and privacy challenges in these systems and developing novel solutions under the assumption of zero or limited trust.
         I obtained my Ph.D. degree in Computer Science at Virginia Tech, supervised by <a href="https://www.cnsr.ictas.vt.edu/WJLou.html" style="color:blue">Dr. Wenjing Lou</a>. I received my master's degree in Computer Science from <a href="https://www.tsinghua.edu.cn/en/" style="color:blue">Tsinghua University</a> and bachelor's degree in Information Engineering from <a href="https://www.seu.edu.cn/english/" style="color:blue">Southeast University</a>.
         </p>
         <!-- <p class="pmargin"><b>I am looking for self-motivated students to work on security and privacy topics in blockchain, distributed systems, next-G mobile networks, among other exciting things. Check out <a href="members.html" style="color:red">Members</a> for details.</b></p> -->
@@ -102,12 +103,13 @@
     <h3> <p class="pmargin w3-text-indigo"> News </p></h3>
     <h6>
         <p class="pmargin">
-        &#9726;&nbsp; [May 2023] Our paper "UCBlocker: Unwanted Call Blocking Using Anonymous Authentication" is accepted by USENIX Security 2023. <br>
-        &#9726;&nbsp; [Mar 2023] Our paper "MS-PTP: Protecting Network Timing from Byzantine Attacks" is accepted by ACM WiSec 2023. <br>
+        &#9726;&nbsp; [July 2023] Our paper "EchoSensor: Fine-Grained Ultrasonic Sensing for Smart Home Intrusion Detection" was accepted by ACM Transactions on Sensor Networks (TOSN). <br>
+        &#9726;&nbsp; [May 2023] Our paper "UCBlocker: Unwanted Call Blocking Using Anonymous Authentication" was accepted by USENIX Security 2023. <br>
+        &#9726;&nbsp; [Mar 2023] Our paper "MS-PTP: Protecting Network Timing from Byzantine Attacks" was accepted by ACM WiSec 2023. <br>
         &#9726;&nbsp; [Mar 2023] I am invited to serve on IEEE ICCCN 2023 program committee. <br>       
-        &#9726;&nbsp; [Mar 2023] NSF awards our project on anti-mobile-tracking: "An Anti-tracking and Robocall-free Architecture for Next-G Mobile Networks".<br>
-        &#9726;&nbsp; [Oct 2022] I am invited to serve on IEEE MASS 2022 session chair. <br>       
-        &#9726;&nbsp; [Aug 2022] Our paper "Mobile Tracking in 5G and Beyond Networks: Problems, Challenges, and New Directions" is accepted by IEEE MASS 2022.
+        &#9726;&nbsp; [Mar 2023] NSF awarded our project on anti-mobile-tracking: "An Anti-tracking and Robocall-free Architecture for Next-G Mobile Networks".<br>
+        &#9726;&nbsp; [Oct 2022] I was invited to serve on IEEE MASS 2022 session chair. <br>       
+        &#9726;&nbsp; [Aug 2022] Our paper "Mobile Tracking in 5G and Beyond Networks: Problems, Challenges, and New Directions" was accepted by IEEE MASS 2022.
         </p>
     </h6>
 </div>
