--- a/publication.html
+++ b/publication.html
@@ -40,12 +40,13 @@
 <!-- top bar -->
 <div class="w3-top">
 
-    <div class="w3-row w3-large" style="background-color:#861F41;color:white">
+    <div class="w3-row w3-large" style="background-color:#B3A369;color:white">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="https://www.gtsi.edu.cn/directory/" class="w3-bar-item w3-padding-small"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:415px; height:36px; " align="middle"></a>
         <a href="service.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Service</a>
         <a href="research.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Research</a>
-        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right w3-white">Publication</a>
-        <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Home</a>
+        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Publication</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right w3-white">Home</a>
     </div>
 
     <!-- Navbar on small screens -->
