--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
 
     <div class="w3-row w3-large" style="background-color:#B3A369;color:white">
         <a class="w3-bar-item w3-button w3-padding-large w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="https://www.gtsi.edu.cn/directory/" class="w3-bar-item w3-padding-small"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:415px; height:36px; " align="middle"></a>
+        <a href="https://www.gtsi.edu.cn/directory/" class="w3-bar-item w3-button w3-padding-large"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:346px; height:30px; " align="middle"></a>
         <a href="service.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Service</a>
         <a href="research.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Research</a>
         <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Publication</a>
