--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-large">
-        <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>    
-        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large">Publication</a>
-        <a href="research.html" class="w3-bar-item w3-button w3-padding-large">Research</a>
-        <a href="service.html" class="w3-bar-item w3-button w3-padding-large">Service</a>  
+        <a href="index.html" class="w3-bar-item w3-button w3-padding">Home</a>    
+        <a href="publication.html" class="w3-bar-item w3-button w3-padding">Publication</a>
+        <a href="research.html" class="w3-bar-item w3-button w3-padding">Research</a>
+        <a href="service.html" class="w3-bar-item w3-button w3-padding">Service</a>  
     </div>
 </div>
 
