--- a/research-anti-tracking.html
+++ b/research-anti-tracking.html
@@ -41,20 +41,20 @@
 <div class="w3-top">
 
     <div class="w3-row w3-large" style="background-color:#B3A369;color:white">
-        <a class="w3-bar-item w3-button w3-padding-large w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="https://www.gtsi.edu.cn/directory/" class="w3-bar-item w3-button w3-padding-large"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:346px; height:30px; " align="middle"></a>
-        <a href="service.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Service</a>
-        <a href="research.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Research</a>
-        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right">Publication</a>
-        <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small w3-right w3-white">Home</a>
+        <a href="https://www.gtsi.edu.cn/directory/" class="w3-bar-item w3-button w3-padding"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:322px; height:28px; " align="middle"></a>
+        <a class="w3-bar-item w3-button w3-padding w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="service.html" class="w3-bar-item w3-button w3-padding w3-hide-small w3-right">Service</a>
+        <a href="research.html" class="w3-bar-item w3-button w3-padding w3-hide-small w3-right">Research</a>
+        <a href="publication.html" class="w3-bar-item w3-button w3-padding w3-hide-small w3-right">Publication</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-padding w3-hide-small w3-right">Home</a>
     </div>
 
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-light-grey w3-hide w3-hide-large w3-large">
-        <a href="index.html" class="w3-bar-item w3-button w3-padding-large">Home</a>    
-        <a href="publication.html" class="w3-bar-item w3-button w3-padding-large">Publication</a>
-        <a href="research.html" class="w3-bar-item w3-button w3-padding-large">Research</a>
-        <a href="service.html" class="w3-bar-item w3-button w3-padding-large">Service</a>  
+        <a href="index.html" class="w3-bar-item w3-button w3-padding">Home</a>    
+        <a href="publication.html" class="w3-bar-item w3-button w3-padding">Publication</a>
+        <a href="research.html" class="w3-bar-item w3-button w3-padding">Research</a>
+        <a href="service.html" class="w3-bar-item w3-button w3-padding">Service</a>  
     </div>
     
 </div>
