--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         &#9726;&nbsp; [July 2023] Our paper "EchoSensor: Fine-Grained Ultrasonic Sensing for Smart Home Intrusion Detection" was accepted by ACM Transactions on Sensor Networks (TOSN). <br>
         &#9726;&nbsp; [May 2023] Our paper "UCBlocker: Unwanted Call Blocking Using Anonymous Authentication" was accepted by USENIX Security 2023. <br>
         &#9726;&nbsp; [Mar 2023] Our paper "MS-PTP: Protecting Network Timing from Byzantine Attacks" was accepted by ACM WiSec 2023. <br>
-        &#9726;&nbsp; [Mar 2023] I am invited to serve on IEEE ICCCN 2023 program committee. <br>       
+        &#9726;&nbsp; [Mar 2023] I was invited to serve on IEEE ICCCN 2023 program committee. <br>       
         &#9726;&nbsp; [Mar 2023] NSF awarded our project on anti-mobile-tracking: "An Anti-tracking and Robocall-free Architecture for Next-G Mobile Networks".<br>
         &#9726;&nbsp; [Oct 2022] I was invited to serve on IEEE MASS 2022 session chair. <br>       
         &#9726;&nbsp; [Aug 2022] Our paper "Mobile Tracking in 5G and Beyond Networks: Problems, Challenges, and New Directions" was accepted by IEEE MASS 2022.
