--- a/publication.html
+++ b/publication.html
@@ -68,7 +68,13 @@
     <h3> <p class="pmargin w3-text-indigo"> Conference Publications </p></h3>
     <h6>
         <p class="pmargin">
-
+            
+        <strong>UCBlocker: Unwanted Call Blocking Using Anonymous Authentication</strong> 
+        [<a href="https://angelosk.github.io/Papers/2023/UCBlocker.pdf" style="color:red">PDF</a>]
+        <br> C. Du, H. Yu, Y. Xiao, Y. Hou, A. Keromytis, W. Lou
+        <br> <em>The 32nd USENIX Security Symposium </em>, 2023.
+        <br><br>
+            
         <strong>MS-PTP: Protecting Network Timing from Byzantine Attacks</strong> 
         [<a href="papers/wisec23-winter-paper62.pdf" style="color:red">PDF</a>]
         <br> S. Shi, Y. Xiao, C. Du, M. Shahriar, A. Li, N. Zhang, Y. Hou, W. Lou
