--- a/service.html
+++ b/service.html
@@ -41,7 +41,7 @@
 <div class="w3-top">
 
     <div class="w3-row w3-large" style="background-color:#B3A369;color:white">
-        <a href="https://www.gtsi.edu.cn/directory/" class="w3-bar-item w3-button w3-padding"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:322px; height:28px; " align="middle"></a>
+        <a href="https://faculty.gtsi.edu.cn/en/node/3561" class="w3-bar-item w3-button w3-padding"><img class="w3-center" src="media/gtsi-logo-white-1_0.png" style="width:322px; height:28px; " align="middle"></a>
         <a class="w3-bar-item w3-button w3-padding w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="service.html" class="w3-bar-item w3-button w3-padding w3-hide-small w3-right">Service</a>
         <a href="research.html" class="w3-bar-item w3-button w3-padding w3-hide-small w3-right">Research</a>
