--- a/publication.html
+++ b/publication.html
@@ -70,7 +70,7 @@
         <p class="pmargin">
             
         <strong>UCBlocker: Unwanted Call Blocking Using Anonymous Authentication</strong> 
-        [<a href="https://angelosk.github.io/Papers/2023/UCBlocker.pdf" style="color:red">PDF</a>]
+        [<a href="https://www.usenix.org/system/files/usenixsecurity23-du.pdf" style="color:red">PDF</a>]
         <br> C. Du, H. Yu, Y. Xiao, Y. Hou, A. Keromytis, W. Lou
         <br> <em>The 32nd USENIX Security Symposium</em>, 2023.
         <br><br>
