--- a/publication.html
+++ b/publication.html
@@ -76,13 +76,13 @@
         <br><br>
             
         <strong>MS-PTP: Protecting Network Timing from Byzantine Attacks</strong> 
-        [<a href="papers/wisec23-winter-paper62.pdf" style="color:red">PDF</a>]
+        [<a href="https://dl.acm.org/doi/pdf/10.1145/3558482.3590184" style="color:red">PDF</a>]
         <br> S. Shi, Y. Xiao, C. Du, M. Shahriar, A. Li, N. Zhang, Y. Hou, W. Lou
         <br> <em>The 16th ACM Conference on Security and Privacy in Wireless and Mobile Networks (WiSec)</em>, 2023.
         <br><br>
 
         <strong>Mobile Tracking in 5G and Beyond Networks: Problems, Challenges, and New Directions</strong> 
-        [<a href="https://www.cnsr.ictas.vt.edu/publication/Changlai2022.pdf" style="color:red">PDF</a>]
+        [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9973506" style="color:red">PDF</a>]
         <br> C. Du, H. Yu, Y. Xiao, W. Lou, C. Wang, R. Gazda, and Y. Hou
         <br> <em>The 19th IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS)</em>, 2022.
         <br><br>
