--- a/publication.html
+++ b/publication.html
@@ -88,7 +88,7 @@
         <br><br>
 
         <strong>Context-Free Fine-Grained Motion Sensing using WiFi</strong> 
-        [<a href="https://www.cnsr.ictas.vt.edu/publication/secon18_final.pdf" style="color:red">PDF</a>]
+        [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8397118" style="color:red">PDF</a>]
         <br> C. Du, X. Yuan, W. Lou, and Y. Hou
         <br> <em>15th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON)</em>, 2018. (AR=23.2%)
         <br><br>
