--- a/publication.html
+++ b/publication.html
@@ -82,13 +82,13 @@
         <br><br>
 
         <strong>Mobile Tracking in 5G and Beyond Networks: Problems, Challenges, and New Directions</strong> 
-        [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9973506" style="color:red">PDF</a>]
+        [<a href="https://www.cnsr.ictas.vt.edu/publication/Changlai2022.pdf" style="color:red">PDF</a>]
         <br> <strong>Changlai Du</strong>; Hexuan Yu; Yang Xiao; Wenjing Lou; Chonggang Wang; Robert Gazda; Y. Thomas Hou
         <br> <em>The 19th IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS)</em>, 2022.
         <br><br>
 
         <strong>Context-Free Fine-Grained Motion Sensing using WiFi</strong> 
-        [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8397118" style="color:red">PDF</a>]
+        [<a href="https://www.cnsr.ictas.vt.edu/publication/secon18_final.pdf" style="color:red">PDF</a>]
         <br> <strong>Changlai Du</strong>; Xiaoqun Yuan; Wenjing Lou; Y. Thomas Hou
         <br> <em>15th Annual IEEE International Conference on Sensing, Communication, and Networking (SECON)</em>, 2018. (AR=23.2%)
         <br><br>
@@ -140,13 +140,13 @@
     <h6>
         <p class="pmargin">
         <Strong>A Dynamic Virtual Datacenter Selection Strategy for Integrated Cloud Service Platform Construction with Multiclouds</Strong>
-        [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8915855" style="color:red">PDF</a>]
+        [<a href="papers/2019_Access.pdf" style="color:red">PDF</a>]
         <br> Bo Huang; <strong>Changlai Du</strong>; Mengting Sun; Xiaoqun Yuan 
         <br> <em>IEEE Access</em>, 2019.
 
         <br><br>
         <strong>A strategy for improving NetClust server placement for multicloud environments</strong>
-        [<a href="https://journals.tubitak.gov.tr/cgi/viewcontent.cgi?article=2015&context=elektrik" style="color:red">PDF</a>]
+        [<a href="papers/2018_Turkish.pdf" style="color:red">PDF</a>]
         <br> Yuting Zhao; Jinhong Liu; Qing Fang; Lifang Xu; <strong>Changlai Du</strong>; Xiaoqun Yuan
         <br> <em>Turkish Journal of Electrical Engineering & Computer Sciences</em>, 2018.
 
@@ -158,7 +158,7 @@
 
         <br><br>
         <strong>Efficient User Authentication and Key Management for Peer-to-Peer Live Streaming Systems</strong>
-        [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=6074898" style="color:red">PDF</a>]
+        [<a href="papers/2009_Tsinghua.pdf" style="color:red">PDF</a>]
         <br> Xuening Liu; Hao Yin; Chuang Lin; <strong>Changlai Du</strong>
         <br> <em>Tsinghua Science & Technology</em>, 2009.
 
@@ -174,7 +174,7 @@
     <h6>
         <p class="pmargin">
         <strong>DLECP: A Dynamic Learning-based Edge Cloud Placement Framework for Mobile Cloud Computing</strong>
-        [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8845174" style="color:red">PDF</a>]
+        [<a href="papers/2019_INFOCOM_Poster.pdf" style="color:red">PDF</a>]
         <br> Xiaoqun Yuan; Mengting Sun; Qing Fang; <strong>Changlai Du</strong>
         <br> <em>IEEE Conference on Computer Com- munications Workshops (INFOCOM WKSHPS)</em>, 2019
 
