--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
     <h3> <p class="pmargin w3-text-indigo"> News </p></h3>
     <h6>
         <p class="pmargin">
-        &#9726;&nbsp; [July 2023] Our paper "EchoSensor: Fine-Grained Ultrasonic Sensing for Smart Home Intrusion Detection" was accepted by ACM Transactions on Sensor Networks (TOSN). <br>
+        &#9726;&nbsp; [Sep 2023] Our paper "AAKA: An Anti-Tracking Cellular Authentication Scheme Leveraging Anonymous Credentials" was accepted by NDSS 2024. <br>            
+        &#9726;&nbsp; [Aug 2023] Our paper "MINDFL: Mitigating the Impact of Imbalanced and Noisy-Labeled Data in Federated Learning With Quality and Fairness-Aware Client Selection" was accepted by MILCOM 2023. <br>
+        &#9726;&nbsp; [Jul 2023] Our paper "EchoSensor: Fine-Grained Ultrasonic Sensing for Smart Home Intrusion Detection" was accepted by ACM Transactions on Sensor Networks (TOSN). <br>
         &#9726;&nbsp; [May 2023] Our paper "UCBlocker: Unwanted Call Blocking Using Anonymous Authentication" was accepted by USENIX Security 2023. <br>
         &#9726;&nbsp; [Mar 2023] Our paper "MS-PTP: Protecting Network Timing from Byzantine Attacks" was accepted by ACM WiSec 2023. <br>
         &#9726;&nbsp; [Mar 2023] I was invited to serve on IEEE ICCCN 2023 program committee. <br>       
