--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <h3> <p class="pmargin w3-text-indigo"> News </p></h3>
     <h6>
         <p class="pmargin">
+        &#9726;&nbsp; [Nov 2023] Our paper "TriSAS: Toward Dependable Inter-SAS Coordination with Auditability" was accepted by AsiaCCS 2024. <br>        
         &#9726;&nbsp; [Sep 2023] Our paper "AAKA: An Anti-Tracking Cellular Authentication Scheme Leveraging Anonymous Credentials" was accepted by NDSS 2024. <br>           
         &#9726;&nbsp; [Aug 2023] I was invited to serve on ACM CCS 2023 posters session program committee. <br>  
         &#9726;&nbsp; [Aug 2023] Our paper "MINDFL: Mitigating the Impact of Imbalanced and Noisy-Labeled Data in Federated Learning With Quality and Fairness-Aware Client Selection" was accepted by MILCOM 2023. <br>
