--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         &#9726;&nbsp; [Mar 2023] Our paper "MS-PTP: Protecting Network Timing from Byzantine Attacks" was accepted by ACM WiSec 2023. <br>
         &#9726;&nbsp; [Mar 2023] I was invited to serve on IEEE ICCCN 2023 program committee. <br>       
         &#9726;&nbsp; [Mar 2023] NSF awarded our project on anti-mobile-tracking: "An Anti-tracking and Robocall-free Architecture for Next-G Mobile Networks".<br>
-        &#9726;&nbsp; [Oct 2022] I was invited to serve on IEEE MASS 2022 session chair. <br>       
+        &#9726;&nbsp; [Oct 2022] I was invited to serve as an IEEE MASS 2022 session chair. <br>       
         &#9726;&nbsp; [Aug 2022] Our paper "Mobile Tracking in 5G and Beyond Networks: Problems, Challenges, and New Directions" was accepted by IEEE MASS 2022.
         </p>
     </h6>
