--- a/service.html
+++ b/service.html
@@ -65,7 +65,7 @@
     </div> -->
 
         <p class="pmargin">
-    <h3> <p class="pmargin w3-text-indigo"> Technical Reviewing </p></h3>
+    <h3> <p class="pmargin w3-text-indigo"> Technical Review </p></h3>
     <h6>
         <p class="pmargin">
         IEEE Transactions on Dependable and Secure Computing (TDSC)
@@ -88,9 +88,10 @@
 
     </h6>
 
-    <h3> <p class="pmargin w3-text-indigo"> Conference Organizing </p></h3>
+    <h3> <p class="pmargin w3-text-indigo"> Conference Organization </p></h3>
     <h6>
         <p class="pmargin">
+        PC member for ACM Conference on Computer and Communications Security (CCS) poster/demo session 2023
         TPC member for IEEE International Conference on Computer Communications (INFOCOM) demo 2023
         <br>Technical support for ARO workshop on AI security and Security of AI 2023
         <br>Session Chair for IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS) 2022
