--- a/service.html
+++ b/service.html
@@ -92,7 +92,7 @@
     <h6>
         <p class="pmargin">
         PC member for ACM Conference on Computer and Communications Security (CCS) poster/demo session 2023
-        TPC member for IEEE International Conference on Computer Communications (INFOCOM) demo 2023
+        <br>TPC member for IEEE International Conference on Computer Communications (INFOCOM) demo 2023
         <br>Technical support for ARO workshop on AI security and Security of AI 2023
         <br>Session Chair for IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS) 2022
         <br>Technical support for MURI project review meeting 2022
