--- a/service.html
+++ b/service.html
@@ -68,36 +68,36 @@
     <h3> <p class="pmargin w3-text-indigo"> Technical Review </p></h3>
     <h6>
         <p class="pmargin">
-        IEEE Transactions on Dependable and Secure Computing (TDSC)
-        <br>ACM Conference on Security and Privacy in Wireless and Mobile Networks (WiSec)
-        <br>IEEE/ACM Transactions on Networking (ToN)
-        <br>European Symposium on Research in Computer Security (ESORICS)
-        <br>International Journal of Communication Systems (IJCS)
-        <br>IEEE Journal of Biomedical and Health Informatics (JBHI)
-        <br>IEEE International Conference on Computer Communications (INFOCOM)
-        <br>IEEE Vehicular Technology Conference (VTC)
-        <br>Transactions on Mobile Computing (TMC)
-        <br>IEEE Conference on Communications and Network Security (CNS)
-        <br>IEEE Wireless Communications and Networking Conference (WCNC)
-        <br>IEEE Journal on Selected Areas - Series on Green Communications and Networking (JSAC-SGCN)
-        <br>International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc)
-        <br>IEEE Wireless Communications Letters (WCL)
-        <br>The Workshop on Secure Network Protocols (NPSec)
-        <br>International Conference on Information and Communications Security (ICICS)
-        <br>International Conference on Security and Privacy in Communication Networks (SecureComm)
+        IEEE Transactions on Dependable and Secure Computing (TDSC)<br>
+        ACM Conference on Security and Privacy in Wireless and Mobile Networks (WiSec)<br>
+        IEEE/ACM Transactions on Networking (ToN)<br>
+        European Symposium on Research in Computer Security (ESORICS)<br>
+        International Journal of Communication Systems (IJCS)<br>
+        IEEE Journal of Biomedical and Health Informatics (JBHI)<br>
+        IEEE International Conference on Computer Communications (INFOCOM)<br>
+        IEEE Vehicular Technology Conference (VTC)<br>
+        Transactions on Mobile Computing (TMC)<br>
+        IEEE Conference on Communications and Network Security (CNS)<br>
+        IEEE Wireless Communications and Networking Conference (WCNC)<br>
+        IEEE Journal on Selected Areas - Series on Green Communications and Networking (JSAC-SGCN)<br>
+        International Symposium on Mobile Ad Hoc Networking and Computing (MobiHoc)<br>
+        IEEE Wireless Communications Letters (WCL)<br>
+        The Workshop on Secure Network Protocols (NPSec)<br>
+        International Conference on Information and Communications Security (ICICS)<br>
+        International Conference on Security and Privacy in Communication Networks (SecureComm)
 
     </h6>
 
     <h3> <p class="pmargin w3-text-indigo"> Conference Organization </p></h3>
     <h6>
         <p class="pmargin">
-        PC member for ACM Conference on Computer and Communications Security (CCS) poster/demo session 2023
-        <br>TPC member for IEEE International Conference on Computer Communications (INFOCOM) demo 2023
-        <br>Technical support for ARO workshop on AI security and Security of AI 2023
-        <br>Session Chair for IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS) 2022
-        <br>Technical support for MURI project review meeting 2022
-        <br>TPC member for IEEE Vehicular Technology Conference (VTC) 2018,2020
-        <br>Student Volunteer for IEEE Conference on Communications and Network Security (CNS) 2013
+        PC member for ACM Conference on Computer and Communications Security (CCS) poster/demo session 2023<br>
+        TPC member for IEEE International Conference on Computer Communications (INFOCOM) demo 2023<br>
+        Technical support for ARO workshop on AI security and Security of AI 2023<br>
+        Session Chair for IEEE International Conference on Mobile Ad-Hoc and Smart Systems (MASS) 2022<br>
+        Technical support for MURI project review meeting 2022<br>
+        TPC member for IEEE Vehicular Technology Conference (VTC) 2018,2020<br>
+        Student Volunteer for IEEE Conference on Communications and Network Security (CNS) 2013
         </p>
     </h6>
 
